k8s/deployment.yaml
# Deployment do Postgre
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres 
spec:
  selector:
    matchLabels:
      app: postgres 
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14.3
          ports:
            - containerPort: 5432
---
apiVersion: v1 
kind: Service 
metadata:
  name: postgres
spec:
  selector:
    app: postgres 
  ports: 
  - port: 5432 
    targetPort: 5432

---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: kubenews
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubenews
  template:
    metadata:
      labels:
        app: kubenews
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"

    spec:
      containers:
      - name: kubenews
        image: luismartorano/kubenewsv1:latest
---
apiVersion: v1 
kind: Service
metadata:
  name: kube-news 
spec: 
  selector:
    app: kubenews
  ports: 
  - port: 80
    targetPort: 8080
    #nodePort: 30000
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-news
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kube-news
            port:
              number: 8080
